# workspaces

./: README.md
actor-sample/: Cargo.toml
animals/: docker-compose.yaml
betterFrontEnd/: README.md  package-lock.json  package.json
compose-health-check/: docker-compose.yaml
conceptnet/: package.json  tsconfig.json
docs/: Apollo_handle_network_error.md  BERT_install.md  DRF_use_instance_in_selializer.md  Django_basic_auth_testing.md  Django_check_param.md  Django_commands.md  Django_create_relation_at_created.md  Django_startapp_in_subdir.md  Django_test_not_working.md  VSCode-remote-check-list.md  VSCode_PythonLangServer_not_working.md  apollo-codegen-memo.md  autoprefixer_grid_error.md  chrome_block_list.md  is_new_tag.md  js_python_forloop.md  next_page_transition.md  openweathermap.md  poetry_start.md  prefetch_sort.md  python_async_requests.md  python_qrcode_in_memory.md  redux-start-with-ts-hooks.md  run_django_on_poetry_script.md  simple_html_scss_vscode.md  swagger_on_VScode.md  useContext_updateValue.md
gpt-crawler/: .gitignore  config.ts
harb/: Cargo.toml  README.md
htmlBench/: README.md  index.100.html  index.1000.html  index.10000.html  index.html
llm-marp/: .gitignore  llm-prompt-issues.md  memo-llm.txt  memo.txt  package.json  scripts.md
match/: Cargo.toml
mercury/: Mercury.sln
nekoaruki_api/: .gitignore  main.py  pyproject.toml
next-ogp/: package-lock.json  package.json
once/: Cargo.toml
seq2seqAttention/: .gitignore  pyproject.toml
seq2seqAttention/data/: train.en  train.ja
seq2seqAttention/src/: pretrain.py  train.py
(+218 files in other folders)
