[tool.poetry]
name = "nekoaruki_api"
version = "1.0.0"
description = ""
authors = ["ragnar"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
