[tool.poetry]
name = "seq2seqAttention"
version = "0.1.0"
description = ""
authors = ["ragnar <apollo.oth@gmail.com>"]
packages = [
    { include="src", from="." },
]

[tool.poetry.dependencies]
python = "^3.6"
keras = "2.3.1"
tensorflow-gpu = "1.12.0"
scikit-learn = "^0.22.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
start = "src.train:main"